--- a/index.html
+++ b/index.html
@@ -824,9 +824,9 @@ window.updateCharacterImage = updateCharacterImage;
 
         let nickname = '';
         let currentSessionId = null;
-        let totalDamage = 0;
+        let totalDamage = 10;
         let currentLevel = 1;
-        let gold = 100;
+        
         let playerHealth = 100;
         let weaponPower = 10;
         let weaponName = 'Кулаки';
@@ -950,9 +950,21 @@ window.toggleAutoHit = toggleAutoHit;
         }
         window.drawShop = drawShop;
 
+        let gold = 100;
 
+function updateGold(amount) {
+    gold = amount;
+    document.getElementById('statusGold').textContent = gold;
+    const playerGoldRef = ref(database, `players/${nickname}/gold`);
+    set(playerGoldRef, gold).then(() => {
+        console.log(`Gold updated in database: ${gold}`);
+    }).catch((error) => {
+        console.error('Error updating gold:', error);
+    });
+}
+window.updateGold = updateGold;
 
-        async function startGame() {
+async function startGame() {
     const input = document.getElementById('nicknameInput').value;
     console.log(`Nickname entered: ${input}`);
     if (input) {
@@ -974,6 +986,16 @@ window.toggleAutoHit = toggleAutoHit;
             currentSessionId = newSessionId;
             console.log(`New session started for ${nickname}: ${newSessionId}`);
             watchSessionChanges();
+
+            // Загружаем прогресс игрока
+            const progressData = await loadProgress(nickname);
+
+            if (!progressData) {
+                // Устанавливаем начальное количество золота для нового игрока, если прогресс не найден
+                const playerGoldRef = ref(database, `players/${nickname}/gold`);
+                await set(playerGoldRef, 100); // Устанавливаем начальное значение золота
+            }
+
             continueGameSetup();
         } catch (error) {
             console.error('Error starting new session:', error);
@@ -982,6 +1004,8 @@ window.toggleAutoHit = toggleAutoHit;
         alert('Пожалуйста, введите никнейм.');
     }
 }
+
+
 window.startGame = startGame;
 
 async function endSession(nickname, sessionId) {
@@ -1151,32 +1175,25 @@ function claimReward(mailId, reward) {
     // Получаем текущее количество золота
     get(playerGoldRef).then((snapshot) => {
         let currentGold = snapshot.val() || 0;
-        currentGold += reward;
+        let newGold = currentGold + reward;
+        updateGold(newGold);  // Используем updateGold
 
-        // Обновляем количество золота и сохраняем прогресс
-        set(playerGoldRef, currentGold).then(() => {
-            console.log(`Gold updated: ${currentGold}`);
-            gold = currentGold; // Обновляем глобальную переменную золота
-            document.getElementById('statusGold').textContent = gold; // Обновляем отображение золота в интерфейсе
+        // Удаляем письмо
+        set(playerMailRef, null).then(() => {
+            console.log(`Mail ${mailId} deleted`);
 
-            // Удаляем письмо
-            set(playerMailRef, null).then(() => {
-                console.log(`Mail ${mailId} deleted`);
-
-                // Перезагружаем почту
-                loadMail();
-                saveProgress(); // Сохраняем прогресс
-                updateStatusBar(); // Обновляем статус бар
-            }).catch((error) => {
-                console.error('Error deleting mail:', error);
-            });
+            // Перезагружаем почту
+            loadMail();
+            saveProgress(); // Сохраняем прогресс
+            updateStatusBar(); // Обновляем статус бар
         }).catch((error) => {
-            console.error('Error updating gold:', error);
+            console.error('Error deleting mail:', error);
         });
     }).catch((error) => {
         console.error('Error getting current gold:', error);
     });
 }
+
 window.claimReward = claimReward;
 
 
@@ -1188,7 +1205,7 @@ function spendGold(amount) {
     get(playerGoldRef).then((snapshot) => {
         let currentGold = snapshot.val() || 0;
         if (currentGold >= amount) {
-            currentGold -= amount;
+            updateGold(currentGold - amount);  // Используем updateGold
 
             // Обновляем количество золота и сохраняем прогресс
             set(playerGoldRef, currentGold).then(() => {
@@ -1251,7 +1268,7 @@ function startHourlyReset() {
         function buyWeapon(type, power, cost) {
             if (gold >= cost) {
                 weaponPower = power;
-                gold -= cost;
+                updateGold(gold - cost);  // Используем updateGold
                 weaponLevel = 1;
                 if (type === 'sword') {
                     weaponName = 'Меч';
@@ -1275,7 +1292,7 @@ function startHourlyReset() {
         function upgradeWeapon(type, costPerLevel) {
             if (gold >= costPerLevel && weaponName === 'Меч') {
                 weaponPower += 15;
-                gold -= costPerLevel;
+                updateGold(gold - costPerLevel);  // Используем updateGold
                 weaponLevel++;
                 updateCharacterMenu();
                 updateShop();
@@ -1357,30 +1374,30 @@ function hitMonster(event) {
         hits += 1;
         updateMonsterHealthDisplay(); // Обновление отображения здоровья
         if (monsterHealth <= 0) {
-            let goldReward = 10 * currentLevel; // Прогрессия награды золота
-            gold += goldReward;
-            document.getElementById('goldAmount').textContent = goldReward; // Обновление отображения заработанного золота
-            levels[currentLevel - 1].completed = true;
+        let goldReward = 10 * currentLevel; // Прогрессия награды золота
+        updateGold(gold + goldReward);  // Используем updateGold для обновления значения в базе данных
+        document.getElementById('goldAmount').textContent = goldReward; // Обновление отображения заработанного золота
+        levels[currentLevel - 1].completed = true;
 
-            // Логирование прогресса перед сохранением
-            console.log('Saving progress after monster kill:', {
-                currentLevel,
-                gold,
-                playerHealth,
-                weaponPower,
-                weaponName,
-                weaponLevel,
-                heroes,
-                levels,
-                monsterHealth // Добавляем здоровье монстра для сохранения
-            });
+        // Логирование прогресса перед сохранением
+        console.log('Saving progress after monster kill:', {
+            currentLevel,
+            gold,
+            playerHealth,
+            weaponPower,
+            weaponName,
+            weaponLevel,
+            heroes,
+            levels,
+            monsterHealth // Добавляем здоровье монстра для сохранения
+        });
 
-            // Сохранение прогресса после убийства монстра
-            saveProgress();
+        // Сохранение прогресса после убийства монстра
+        saveProgress();
 
-            console.log("Calling showVictoryMessage()");
-            showVictoryMessage();
-        }
+        console.log("Calling showVictoryMessage()");
+        showVictoryMessage();
+    }
         document.getElementById('monsterHealthBar').style.width = `${(monsterHealth / baseMonsterHealth) * 100}%`;
         updateCharacterImage(); // вызов функции для смены изображения
     }
@@ -1760,21 +1777,27 @@ function updateWorldBossData() {
     
 
     // Добавляем отображение рейтинга игроков
-    const playersListX = 250; // координаты слева от экрана
-    const playersListStartY = canvas.height / 2 - (Object.keys(playersDamage).length * 15); // вертикальная координата для списка игроков, чтобы он был по центру
-    let playersListY = playersListStartY;
+    const playersListX = canvas.width - 350; // смещение на 200 пикселей от правого края
+const playersListStartY = canvas.height - 700; // смещение на 100 пикселей от низа экрана
+    //const playersListStartY = canvas.height / 2 - (Object.keys(playersDamage).length * 15); // вертикальная координата для списка игроков, чтобы он был по центру
+    let playersListY = playersListStartY - (Object.keys(playersDamage).length * 15); // вертикальная координата для списка игроков, чтобы он был по центру
 
     const lineHeight = 30; // задаем отступ между строками
 
-    ctx.textAlign = 'left';
-    ctx.font = '26px Comic Sans MS';
+    ctx.textAlign = 'right';
+    ctx.font = '26px Roboto';
+    ctx.strokeStyle = 'black'; // цвет обводки
+    ctx.lineWidth = 4; // ширина обводки
+    ctx.fillStyle = 'white'; // цвет текста
+    // Отрисовка заголовка
+    ctx.strokeText('Рейтинг игроков:', playersListX, playersListY);
     ctx.fillText('Рейтинг игроков:', playersListX, playersListY);
     playersListY += lineHeight; // увеличение отступа после заголовка
-
-    //('Players damage data:', playersDamage);
+ 
 
     Object.entries(playersDamage).sort(([, damageA], [, damageB]) => damageB - damageA).forEach(([player, damage], index) => {
         playersListY += lineHeight; // вертикальное смещение для каждой строки
+        ctx.strokeText(`${index + 1}. ${player}: ${damage}`, playersListX, playersListY);
         ctx.fillText(`${index + 1}. ${player}: ${damage}`, playersListX, playersListY);
     });
 
@@ -2004,17 +2027,17 @@ window.calculateTotalHealth = calculateTotalHealth;
 let localGoldUpdated = false;
 
 function updateStatusBar() {
-    console.log('updateStatusBar called'); // Логирование вызова функции
+    //console.log('updateStatusBar called'); // Логирование вызова функции
 
     if (!localGoldUpdated) {
         const playerGoldRef = ref(database, `players/${nickname}/gold`);
         get(playerGoldRef).then((snapshot) => {
             const goldAmount = snapshot.val() || 0;
-            console.log(`Gold amount retrieved from database: ${goldAmount}`); // Логирование полученного значения из базы данных
+           // console.log(`Gold amount retrieved from database: ${goldAmount}`); // Логирование полученного значения из базы данных
 
             document.getElementById('statusGold').textContent = goldAmount;
             gold = goldAmount; // Обновляем глобальную переменную золота
-            console.log(`Global gold variable updated: ${gold}`); // Логирование обновленного значения глобальной переменной
+          //  console.log(`Global gold variable updated: ${gold}`); // Логирование обновленного значения глобальной переменной
 
         }).catch((error) => {
             console.error('Error getting gold:', error);
@@ -2027,7 +2050,7 @@ function updateStatusBar() {
     document.getElementById('playerHealthBar').style.width = playerHealth + '%'; // Обновление ширины полосы здоровья
     document.getElementById('statusDamage').textContent = calculateTotalDamage(); // Обновление значения урона
 
-    console.log('Status bar updated'); // Логирование обновления статус бара
+    //console.log('Status bar updated'); // Логирование обновления статус бара
 }
 window.updateStatusBar = updateStatusBar;
 
