хп бар отображается нормально теперь2

--- a/index.html
+++ b/index.html
@@ -368,7 +368,14 @@
     color: white;
     font-size: 32px;
     line-height: 50px; /* Высота строки совпадает с высотой контейнера */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Тень для текста */
+    font-weight: bold; /* Жирный текст */
+    padding: 0 10px; /* Отступы по бокам */
+    border: 2px solid rgba(0, 0, 0, 0.5); /* Обводка вокруг текста */
+    border-radius: 5px; /* Скругленные углы */
+    background-color: rgba(0, 0, 0, 0.3); /* Полупрозрачный фон */
 }
+
 
 
 
